# lightnovel-crawler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Makefile  README.md  README.rst  compose.yml  pyproject.toml  setup_pyi.py
.github/: FORKING.md  contribs.json
.github/docs/: ARCHITECTURE.md  CREATING_CRAWLERS.md  DOCKER.md
.github/workflows/: build-docker.yml  deploy.yml  docker-base.yml  index-gen.yml  lint-py.yml  lint-web.yml  lint.yml  release.yml
docs/: ARCHITECTURE.md
etc/wuxiaworld.com/: wuxia.proto  wuxia.proto.json
lncrawl/: __init__.py  __main__.py  app.py  config.py  constants.py  context.py  exceptions.py
lncrawl-web/: package-lock.json  package.json
lncrawl/assets/: banner.py  icons.py  languages.py
lncrawl/assets/emails/: __init__.py
lncrawl/assets/images/: __init__.py
lncrawl/binders/: __init__.py  calibre.py  epub.py  json.py  text.py  web.py
lncrawl/bots/: __init__.py  _sample.py
lncrawl/bots/console/: __init__.py  get_crawler.py  integration.py  login_info.py  open_folder_prompt.py  output_style.py  range_selection.py  resume_download.py
lncrawl/bots/discord/: __init__.py  config.py  discord_bot.py  message_handler.py
lncrawl/bots/lookup/: __init__.py  analyze.py  generator.py  prompts.py
lncrawl/bots/server/: __init__.py  app.py  config.py  context.py  db.py  exceptions.py  security.py
lncrawl/cloudscraper/: __init__.py
lncrawl/commands/: config.py  crawl.py  search.py  server.py  version.py
lncrawl/commands/dev/: __init__.py
lncrawl/commands/sources/: __init__.py  app.py  create.py  list.py  view.py
lncrawl/core/: __init__.py  app.py  arguments.py  browser.py  cleaner.py  crawler.py  display.py  download_chapters.py  download_images.py  exeptions.py  legacy.py  logconfig.py  metadata.py  models.py  novel_info.py  novel_search.py  proxy.py  scraper.py  soup.py  sources.py  taskman.py  template.py
lncrawl/dao/: __init__.py  _base.py  announcement.py  artifact.py  chapter.py  chapter_image.py  enums.py  feedback.py  job.py  library.py  novel.py  read_history.py  secrets.py  tag.py  user.py  volume.py
lncrawl/migrations/: env.py
lncrawl/migrations/versions/: 2026_03_06_08_21_49_initial.py  2026_03_08_19_20_00_merge_verifiedemail_to_user.py  2026_03_19_21_33_54_artifact_file_size_column.py  2026_03_30_23_56_49_announcements.py
lncrawl/models/: __init__.py  chapter.py  formats.py  meta.py  novel.py  search_result.py  session.py  volume.py
lncrawl/server/: app.py  security.py  tier.py  webview.py
lncrawl/server/api/: __init__.py  admin.py  announcements.py  artifacts.py  auth.py  chapters.py  feedback.py  history.py  jobs.py  libraries.py  meta.py  novels.py  settings.py  volumes.py
lncrawl/server/middleware/: staticfiles.py
lncrawl/server/models/: __init__.py  announcement.py  config.py  feedback.py  job.py  novel.py  sources.py  user.py
lncrawl/services/: announcements.py  artifacts.py  chapters.py  crawler.py  db.py  feedback.py  fetch.py  file.py  history.py  images.py  libraries.py  logger.py  mail.py  novels.py  secrets.py  tags.py  users.py  volumes.py
lncrawl/services/admin/: config.py  service.py
lncrawl/services/binder/: __init__.py  calibre.py  epub.py  json.py  service.py  text.py
lncrawl/services/crawler/: __init__.py  service.py  utils.py
lncrawl/services/jobs/: __init__.py  service.py  utils.py
lncrawl/services/scheduler/: __init__.py  runner.py  scrubber.py  service.py
lncrawl/services/sources/: __init__.py  helper.py  service.py  utils.py
lncrawl/templates/: __init__.py  _base.py  freewebnovel.py  madara.py  mangastream.py  novelfull.py  novelmtl.py  novelpub.py  wordpress.py
lncrawl/templates/browser/: __init__.py  basic.py  chapter_only.py  general.py  login.py  optional_volume.py  (+2 more)
lncrawl/utils/: __init__.py  common.py  crypto_tools.py  file_tools.py  html_tools.py  imgen.py  json_tools.py  kindlegen_download.py  material_colors.py  pbincli.py  platforms.py  ratelimit.py  sockets.py  ssl_no_verify.py  text_tools.py  tilings.py  time_utils.py  url_tools.py  webview.py
lncrawl/webdriver/: __init__.py  elements.py  job_queue.py  local.py  remote.py  scripts.py
scripts/: bump.py  check_sources.py  index_gen.py  local-compose.yml  server-compose.yml
sources/: _index.json  _rejected.json
sources/_examples/: _00_basic.py  _01_general_soup.py  _02_searchable_soup.py  _03_chapter_only_soup.py  _04_searchable_chapter_only_soup.py  _05_with_volume_soup.py  _06_searchable_with_volume_soup.py  _07_optional_volume_soup.py  _08_searchable_optional_volume_soup.py  _09_basic_browser.py  _10_general_browser.py  _11_searchable_browser.py  _12_chapter_only_browser.py  _13_searchable_chapter_only_browser.py  _14_with_volume_browser.py  _15_searchable_with_volume_browser.py  _16_optional_volume_browser.py  _17_searchable_optional_volume_browser.py
sources/ar/: arnovel.py  rewayatclub.py
sources/es/: domentranslations.py  novelasligera_com.py  novelasligeras.py
sources/fr/: animesama.py  chireads.py  lnmtlfr.py  massnovel.py  noveldeglace.py  xiaowaz.py
sources/id/: darktrans.py  grensia_blogspot.py  idqidian.py  indomtl.py  indowebnovel.py  meionovel.py  morenovel.py  novelgo.py  novelku.py  novelringan.py  noveltoon.py  wbnovel.py  webnovelindonesia.py  webnovelover.py  worldnovelonline.py  yukinovel.py  zhiend.py
sources/ja/: syosetu.py  syosetuorg.py
sources/multi/: foxaholic.py  mtlnovel.py  novelupdates.py  quotev.py  wattpad.py  webfic.py  wtrlab.py
sources/pt/: blnovels.py  centralnovel.py  ceunovel.py  illusia.py  novelmania.py  novelmania_com_br.py  phoenixnovels.py
sources/ru/: authortoday.py  bestmanga.py  ifreedom.py  jaomix.py  labnovel.py  litnet.py  ranobelib.py  ranobenovel.py  renovels.py  rulate.py
sources/tr/: fenrirscan.py
sources/vi/: lnhakone.py  truenfull.py
sources/zh/: 27k.py  69shuba.cx.py  69shuba.py  daocaorenshuwu.py  ddxsss.py  ixdzs.py  novel543.py  piaotian.py  powanjuan.py  shuhaige.py  shw5.py  soxs.py  trxs.py  uukanshu.py  uukanshu_sj.py  xbanxia.py  xnunu.py
(+336 files in other folders)
