[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "Lightnovel Crawler Team", email = "lncrawl@pm.me"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Games/Entertainment",
  "Environment :: Console",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "alembic>=1.12.0",
  "base58~=2.1.1",
  "beautifulsoup4>=4.8.0,<5.0.0",
  "cachetools>=5.0.0",
  "chardet>=5.0.0,<6.0.0",
  "colorama>=0.4.0,<0.5.0",
  "ebooklib>=0.17.0,<1.0.0",
  "fastapi[standard]>=0.100.0",
  "html5lib~=1.1",
  "httpx[brotli,http2]>=0.24.0",
  "humanize>=4.0.0",
  "lxml>=5.4.0,<7.0.0",
  "openai>=1.0.0",
  "passlib[argon2]>=1.7.4",
  "pillow>=8.0.0",
  "prompt-toolkit~=3.0",
  "psycopg[binary]>=3.1.0",
  "pycryptodome>=3.0.0,<4.0.0",
  "pyease-grpc>=1.7.0",
  "PyExecJS>=1.5.1,<2.0.0",
  "pyOpenSSL>=24.0.0",
  "pyparsing>=3.1.0",
  "python-box>=6.0.0,<8.0.0",
  "python-dateutil>=2.8.0",
  "python-dotenv>=0.15.0,<2.0.0",
  "python-jose[cryptography]>=3.3.0",
  "python-slugify>=4.0.0,<9.0.0",
  "questionary>=1.6.0",
  "readability-lxml>=0.8.0,<1.0.0",
  "regex>=2023.0.0",
  "requests_toolbelt>=1.0.0",
  "requests>=2.32.0",
  "selenium>=4.0.0,<5.0.0",
  "sqlmodel>=0.0.14",
  "tqdm>=4.60.0,<5.0.0",
  "typer>=0.9.0",
  "uvicorn>=0.23.0",
  "websocket-client>=1.7.0",
  "zstd>=1.5.7.0",
  "cloudscraper @ git+https://github.com/lncrawl/cloudscraper.git",
]
description = "Download lightnovels from various online sources and generate output in different formats, e.g. epub, mobi, json, text, docx, pdf, html etc."
dynamic = ["version"]
keywords = ["lightnovel", "crawler", "lncrawl", "novel", "pdf", "epub", "mobi", "scraper"]
name = "lightnovel-crawler"
readme = "README.rst"
requires-python = ">=3.8.1"

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "build>=0.10.0",
  "flake8>=6.0.0",
  "lxml-stubs>=0.4.0",
  "pyinstaller>=5.13.0",
  "setuptools>=61.0",
  "tk-tools>=0.1.0",
  "types-cachetools>=5.3.0",
  "types-colorama>=0.4.0",
  "types-passlib>=1.7.0",
  "types-python-dateutil>=2.8.0",
  "types-python-jose>=3.3.0",
  "types-setuptools>=65.0.0",
  "types-tqdm>=4.65.0",
  "types-zstd>=1.5.0",
  "wheel>=0.40.0",
]

[project.urls]
"Documentation" = "https://github.com/lncrawl/lightnovel-crawler/blob/master/README.md"
"Issue Tracker" = "https://github.com/lncrawl/lightnovel-crawler/issues"
"Source Code" = "https://github.com/lncrawl/lightnovel-crawler"

[project.scripts]
lightnovel-crawler = "lncrawl:main"
lightnovel_crawler = "lncrawl:main"
lncrawl = "lncrawl:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "lncrawl/VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "build*", "dist*"]
include = ["lncrawl*", "sources*"]
where = ["."]

[tool.setuptools.package-data]
lncrawl = ["**/*", "!**/*.py", "!**/__pycache__/*"]
sources = ["**/*", "!**/*.py", "!**/__pycache__/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "**/__pycache__/*"]

[tool.black]
extend-exclude = '''/
   \.github
  | \.venv*
  | venv*
  | __pycache__
  | build
  | dist
  | res
  | logs
  | Lightnovels
  | sqlite\.db
  | lncrawl-web
'''
line-length = 120
